Changed color of texts and changed logo an added output ss

--- a/app/src/main.css
+++ b/app/src/main.css
@@ -1,3 +1,6 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+.swv-button-trigger {
+    @apply bg-blue-700 justify-center !important;
+}
